move classes to individual files

--- a/HelloWorld/HelloWorld.csproj
+++ b/HelloWorld/HelloWorld.csproj
@@ -36,6 +36,8 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Person.cs" />
     <Compile Include="Math\Calculator.cs" />
+    <Compile Include="NumberValidator.cs" />
+    <Compile Include="Animal.cs" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Math\" />
